[project]
name = "udl-diffusion-semantics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.7",
    "moviepy>=1.0.3",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]
